<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.10</version>
    </parent>

    <groupId>community.flock.pragmatic</groupId>
    <artifactId>demo</artifactId>
    <version>${revision}</version>

    <packaging>pom</packaging>

    <modules>
        <module>api</module>
        <module>app</module>
        <module>domain</module>
        <module>spi</module>
    </modules>

    <properties>
        <arrow.version>2.2.2.1</arrow.version>
        <dependency-analyze.strict>false</dependency-analyze.strict>
        <java.version>21</java.version>
        <kotest.version>6.1.11</kotest.version>
        <kotlin.version>2.3.20</kotlin.version>
        <ktlint.version>1.8.0</ktlint.version>
        <testcontainers.version>1.21.4</testcontainers.version>
        <wirespec.version>0.17.20</wirespec.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.testcontainers</groupId>
                <artifactId>testcontainers</artifactId>
                <version>${testcontainers.version}</version>
            </dependency>
            <dependency>
                <groupId>org.testcontainers</groupId>
                <artifactId>cassandra</artifactId>
                <version>${testcontainers.version}</version>
            </dependency>
            <dependency>
                <groupId>org.testcontainers</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>${testcontainers.version}</version>
            </dependency>
            <dependency>
                <groupId>community.flock.wirespec.integration</groupId>
                <artifactId>jackson-jvm</artifactId>
                <version>${wirespec.version}</version>
            </dependency>
            <dependency>
                <groupId>community.flock.wirespec.integration</groupId>
                <artifactId>wirespec-jvm</artifactId>
                <version>${wirespec.version}</version>
            </dependency>
            <dependency>
                <groupId>community.flock.pragmatic</groupId>
                <artifactId>domain</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>community.flock.pragmatic</groupId>
                <artifactId>api</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>community.flock.pragmatic</groupId>
                <artifactId>petstore</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>io.arrow-kt</groupId>
                <artifactId>arrow-core-jvm</artifactId>
                <version>${arrow.version}</version>
            </dependency>
            <dependency>
                <groupId>io.kotest</groupId>
                <artifactId>kotest-assertions-arrow-jvm</artifactId>
                <version>${kotest.version}</version>
            </dependency>
            <dependency>
                <groupId>io.kotest</groupId>
                <artifactId>kotest-runner-junit5-jvm</artifactId>
                <version>${kotest.version}</version>
            </dependency>
            <dependency>
                <groupId>io.kotest</groupId>
                <artifactId>kotest-assertions-core-jvm</artifactId>
                <version>${kotest.version}</version>
            </dependency>
            <dependency>
                <groupId>io.kotest</groupId>
                <artifactId>kotest-property-jvm</artifactId>
                <version>${kotest.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.jetbrains.kotlin</groupId>
            <artifactId>kotlin-stdlib</artifactId>
        </dependency>
    </dependencies>

    <build>
        <sourceDirectory>${project.basedir}/src/main/kotlin</sourceDirectory>
        <testSourceDirectory>${project.basedir}/src/test/kotlin</testSourceDirectory>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-dependency-plugin</artifactId>
                    <configuration>
                        <failOnWarning>${dependency-analyze.strict}</failOnWarning>
                        <ignoredDependencies>
                            <ignoredDependency>org.jetbrains:annotations</ignoredDependency>
                        </ignoredDependencies>
                        <ignoredUnusedDeclaredDependencies>
                            <ignoredUnusedDeclaredDependency>io.kotest:kotest-runner-junit5-jvm</ignoredUnusedDeclaredDependency>
                            <ignoredUnusedDeclaredDependency>org.junit.jupiter:junit-jupiter-engine</ignoredUnusedDeclaredDependency>
                            <ignoredUnusedDeclaredDependency>org.springframework.boot:spring-boot-actuator-autoconfigure</ignoredUnusedDeclaredDependency>
                            <ignoredUnusedDeclaredDependency>org.springframework.boot:spring-boot-starter-data-jpa</ignoredUnusedDeclaredDependency>
                            <ignoredUnusedDeclaredDependency>org.springframework.boot:spring-boot-starter-web</ignoredUnusedDeclaredDependency>
                            <ignoredUnusedDeclaredDependency>org.springframework.boot:spring-boot-starter-webflux</ignoredUnusedDeclaredDependency>
                        </ignoredUnusedDeclaredDependencies>
                    </configuration>
                    <executions>
                        <execution>
                            <goals>
                                <goal>analyze-only</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-antrun-plugin</artifactId>
                    <version>${maven-antrun-plugin.version}</version>
                    <dependencies>
                        <dependency>
                            <groupId>com.pinterest.ktlint</groupId>
                            <artifactId>ktlint-cli</artifactId>
                            <version>${ktlint.version}</version>
                        </dependency>
                        <!-- additional 3rd party ruleset(s) can be specified here -->
                    </dependencies>
                    <executions>
                        <execution>
                            <id>ktlint-format</id>
                            <goals>
                                <goal>run</goal>
                            </goals>
                            <configuration>
                                <target name="ktlint">
                                    <java classname="com.pinterest.ktlint.Main" classpathref="maven.plugin.classpath" dir="${basedir}" failonerror="true" fork="true" taskname="ktlint">
                                        <jvmarg value="--add-opens=java.base/java.lang=ALL-UNNAMED"/>
                                        <arg value="-F"/>
                                        <arg value="src/**/*.kt"/>
                                    </java>
                                </target>
                            </configuration>
                        </execution>
                        <execution>
                            <id>ktlint</id>
                            <goals>
                                <goal>run</goal>
                            </goals>
                            <phase>verify</phase>
                            <configuration>
                                <target name="ktlint">
                                    <java classname="com.pinterest.ktlint.Main" classpathref="maven.plugin.classpath" dir="${basedir}" failonerror="true" fork="true" taskname="ktlint">
                                        <arg value="src/**/*.kt"/>
                                    </java>
                                </target>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.jetbrains.kotlin</groupId>
                <artifactId>kotlin-maven-plugin</artifactId>
                <configuration>
                    <args>
                        <arg>-Xjsr305=strict</arg>
                    </args>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>com.github.ekryd.sortpom</groupId>
                <artifactId>sortpom-maven-plugin</artifactId>
                <version>3.2.0</version>
                <configuration>
                    <predefinedSortOrder>custom_1</predefinedSortOrder>
                    <lineSeparator>\n</lineSeparator>
                    <encoding>${project.build.sourceEncoding}</encoding>
                    <sortProperties>true</sortProperties>
                    <sortDependencies>scope</sortDependencies>
                    <nrOfIndentSpace>4</nrOfIndentSpace>
                    <expandEmptyElements>false</expandEmptyElements>
                    <createBackupFile>false</createBackupFile>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>sort</goal>
                        </goals>
                        <phase>verify</phase>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>format</id>
            <build>
                <pluginManagement>
                    <plugins>
                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-antrun-plugin</artifactId>
                            <executions>
                                <execution>
                                    <id>ktlint-format</id>
                                    <phase>validate</phase>
                                </execution>
                            </executions>
                        </plugin>
                    </plugins>
                </pluginManagement>
            </build>
        </profile>
    </profiles>

</project>
